change the font color for red

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --main-white: #FFFFFF;
+    --main-white: #ec0f0f;
     --blue-button: #167BF7;
     --bg-color: #00030C;
     --secundary-grey: #C0C0C0;
